# mge

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  gcovr.cfg  setup.py  sonar-project.properties
.github/: CODEOWNERS  dependabot.yaml  mergify.yaml
.github/workflows/: ci.yaml  coverage.yaml  pre-commit.yaml  sonar.yaml
cmake/: mge_ascii_banner.cmake  mge_cmake_options.cmake  mge_constants.cmake  mge_coverage.cmake  mge_include_catch2.cmake  mge_include_third_party.cmake  mge_options.cmake  mge_third_party_config.cmake
docs/doxygen/: footer.html  groups.hpp  header.html  namespaces.hpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  main.cpp
engine/core/private/: header.cpp
engine/core/public/: header.hpp
engine/core/public/common/: api.hpp  attributes.hpp  byte.hpp  types.hpp
engine/core/public/hal/: architecture.hpp  compiler.hpp  platform.hpp  platform_types.hpp
engine/core/public/traits/: array_traits.hpp  core.hpp  cv_traits.hpp  integral_properties.hpp  logical_operators.hpp  member_introspection.hpp  pointer_transformations.hpp  primary_classification.hpp  reference_transformations.hpp  relationships.hpp  secondary_classification.hpp
engine/core/public/utility/: declval.hpp  forward.hpp
engine/core/test/: header.test.cpp
engine/core/test/common/: byte.test.cpp  types.test.cpp
engine/core/test/traits/: array_traits.test.cpp  core.test.cpp  cv_traits.test.cpp  integral_properties.test.cpp  is_trivially_copyable.test.cpp  logical_operators.test.cpp  member_introspection.test.cpp  pointer_transformations.test.cpp  primary_classification.test.cpp  reference_transformations.test.cpp  relationships.test.cpp  secondary_classification.test.cpp  type_identity.test.cpp  type_modifiers.test.cpp
test/: smoke_test.cpp
