# ┌───────────────────────────────────────────────────────────────────┐
# │  ███╗   ███╗██╗   ██╗███████╗████████╗██╗ ██████╗                 │
# │  ████╗ ████║╚██╗ ██╔╝██╔════╝╚══██╔══╝██║██╔════╝                 │
# │  ██╔████╔██║ ╚████╔╝ ███████╗   ██║   ██║██║                      │
# │  ██║╚██╔╝██║  ╚██╔╝  ╚════██║   ██║   ██║██║                      │
# │  ██║ ╚═╝ ██║   ██║   ███████║   ██║   ██║╚██████╗                 │
# │  ╚═╝     ╚═╝   ╚═╝   ╚══════╝   ╚═╝   ╚═╝ ╚═════╝                 │
# │                                                                   │
# │   ██████╗  █████╗ ███╗   ███╗███████╗                             │
# │  ██╔════╝ ██╔══██╗████╗ ████║██╔════╝                             │
# │  ██║  ███╗███████║██╔████╔██║█████╗                               │
# │  ██║   ██║██╔══██║██║╚██╔╝██║██╔══╝                               │
# │  ╚██████╔╝██║  ██║██║ ╚═╝ ██║███████╗                             │
# │  ╚══════╝ ╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝                             │
# │                                                                   │
# │  ███████╗███╗   ██╗ ██████╗ ██╗███╗   ██╗███████╗                 │
# │  ██╔════╝████╗  ██║██╔════╝ ██║████╗  ██║██╔════╝                 │
# │  █████╗  ██╔██╗ ██║██║  ███╗██║██╔██╗ ██║█████╗                   │
# │  ██╔══╝  ██║╚██╗██║██║   ██║██║██║╚██╗██║██╔══╝                   │
# │  ███████╗██║ ╚████║╚██████╔╝██║██║ ╚████║███████╗                 │
# │  ╚══════╝╚═╝  ╚═══╝ ╚═════╝ ╚═╝╚═╝  ╚═══╝╚══════╝                 │
# └───────────────────────────────────────────────────────────────────┘

# ~ CMake File for Mystic Game Engine ~

# -------------------------------------------------------------------------------------------------
# CMake Setup
# -------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.20)

# Show Greeting Banner
include(cmake/mge_ascii_banner.cmake)
mge_ascii_banner()

# -------------------------------------------------------------------------------------------------
# Project Configuration
# -------------------------------------------------------------------------------------------------
project(MGE VERSION 0.1 LANGUAGES CXX)

# -------------------------------------------------------------------------------------------------
# C++ Standard
# -------------------------------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# -------------------------------------------------------------------------------------------------
# Targets
# -------------------------------------------------------------------------------------------------
add_executable(MGE
	engine/core/main.cpp
)

# -------------------------------------------------------------------------------------------------
# Testing
# -------------------------------------------------------------------------------------------------
include(cmake/mge_include_catch2.cmake)
include_catch2()
enable_testing()
add_executable(Tests test/smoke_test.cpp)
target_link_libraries(Tests
	PRIVATE Catch2::Catch2WithMain
)
add_test(NAME Tests COMMAND Tests)
