# ┌───────────────────────────────────────────────────────────────────┐
# │  ███╗   ███╗██╗   ██╗███████╗████████╗██╗ ██████╗                 │
# │  ████╗ ████║╚██╗ ██╔╝██╔════╝╚══██╔══╝██║██╔════╝                 │
# │  ██╔████╔██║ ╚████╔╝ ███████╗   ██║   ██║██║                      │
# │  ██║╚██╔╝██║  ╚██╔╝  ╚════██║   ██║   ██║██║                      │
# │  ██║ ╚═╝ ██║   ██║   ███████║   ██║   ██║╚██████╗                 │
# │  ╚═╝     ╚═╝   ╚═╝   ╚══════╝   ╚═╝   ╚═╝ ╚═════╝                 │
# │                                                                   │
# │   ██████╗  █████╗ ███╗   ███╗███████╗                             │
# │  ██╔════╝ ██╔══██╗████╗ ████║██╔════╝                             │
# │  ██║  ███╗███████║██╔████╔██║█████╗                               │
# │  ██║   ██║██╔══██║██║╚██╔╝██║██╔══╝                               │
# │  ╚██████╔╝██║  ██║██║ ╚═╝ ██║███████╗                             │
# │  ╚══════╝ ╚═╝  ╚═╝╚═╝     ╚═╝╚══════╝                             │
# │                                                                   │
# │  ███████╗███╗   ██╗ ██████╗ ██╗███╗   ██╗███████╗                 │
# │  ██╔════╝████╗  ██║██╔════╝ ██║████╗  ██║██╔════╝                 │
# │  █████╗  ██╔██╗ ██║██║  ███╗██║██╔██╗ ██║█████╗                   │
# │  ██╔══╝  ██║╚██╗██║██║   ██║██║██║╚██╗██║██╔══╝                   │
# │  ███████╗██║ ╚████║╚██████╔╝██║██║ ╚████║███████╗                 │
# │  ╚══════╝╚═╝  ╚═══╝ ╚═════╝ ╚═╝╚═╝  ╚═══╝╚══════╝                 │
# └───────────────────────────────────────────────────────────────────┘

# ~ CMake File for Mystic Game Engine ~

# -------------------------------------------------------------------------------------------------
# CMake Setup
# -------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.30)

# -------------------------------------------------------------------------------------------------
# CMake Module Configuration
# -------------------------------------------------------------------------------------------------
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(mge_options)

# Show Greeting Banner
include(cmake/mge_ascii_banner.cmake)
mge_ascii_banner()

# -------------------------------------------------------------------------------------------------
# Project Configuration
# -------------------------------------------------------------------------------------------------
project(MGE VERSION 0.1 LANGUAGES CXX)

# -------------------------------------------------------------------------------------------------
# C++ Standard
# -------------------------------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# -------------------------------------------------------------------------------------------------
# Targets
# -------------------------------------------------------------------------------------------------
# ...

# -------------------------------------------------------------------------------------------------
# Third Party
# -------------------------------------------------------------------------------------------------
include(mge_include_third_party)
mge_include_third_party("${CMAKE_CURRENT_SOURCE_DIR}/third_party")

# -------------------------------------------------------------------------------------------------
# Testing
# -------------------------------------------------------------------------------------------------
if (MGE_ENABLE_TESTING)
  enable_testing()
endif()

# -------------------------------------------------------------------------------------------------
# Subdirectories
# -------------------------------------------------------------------------------------------------
add_subdirectory(engine)
# add_subdirectory(apps/editor)
# add_subdirectory(apps/launcher)
