# -------------------------------------------------------------------------------------------------
# Mystic Game Engine (MGE) - Global Engine Target
# -------------------------------------------------------------------------------------------------
add_library(MGE INTERFACE)
add_library(MGE::Engine ALIAS MGE)

# -------------------------------------------------------------------------------------------------
# Link Core and Internal Dependencies
# -------------------------------------------------------------------------------------------------
target_link_libraries(MGE
  INTERFACE
    MGE::Core
)

# -------------------------------------------------------------------------------------------------
# Include Subdirectories
# -------------------------------------------------------------------------------------------------
add_subdirectory(core)
# add_subdirectory(renderer)
# add_subdirectory(math)
# add_subdirectory(ecs)
